src/objects/INT_SYSTEM__c.object
<CustomObject>
    <description>Defines the different external systems used for integrations.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Brief description about the system.
Example:
CTMS or Clinical Trials Management System is an application based on Oracle Siebel Systems e-Clinical software.  It is the central, global repository for clinical trial monitoring and management at PRA.</description>
        <inlineHelpText>Brief description about the system.
Example:
CTMS or Clinical Trials Management System is an application based on Oracle Siebel Systems e-Clinical software.  It is the central, global repository for clinical trial monitoring and management at PRA.</inlineHelpText>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SystemType__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>System Type</label>
        <referenceTo>INT_SYSTEM_TYPE__c</referenceTo>
        <relationshipLabel>Integration Systems</relationshipLabel>
        <relationshipName>INT_SYSTEMS</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <description>Label of the external system. Used in business logic by integration services. Once a record is created, this value should never be changed.
Please create these labels following some standard conventions. Use upper case only.</description>
        <inlineHelpText>Label of the external system. Used in business logic by integration services. Once a record is created, this value should never be changed.
Please create these labels following some standard conventions. Use upper case only.
Examples: 
EDC_DATALABS</inlineHelpText>
        <label>System</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Integration System</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>System__c</columns>
        <columns>SystemType__c</columns>
        <columns>Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>